Add UTs, modernize codes.